[package]
name = "rust-openfmb-ops-protobuf"
# NB: When modifying the version, also modify html_root_url in lib.rs
version = "2.1.0"
authors = ["Dwayne Bradley <dwayne.bradley@gmail.com>"]
license = "Apache-2.0"
repository = "https://gitlab.com/openfmb/psm/ops/protobuf/rust-openfmb-ops-protobuf/"
documentation = "https://docs.rs/rust-openfmb-ops-protobuf"
readme = "README.md"
description = "Rust language protobuf definitions for the OpenFMB operational use cases."
keywords = ["openfmb", "protobuf"]
categories = ["encoding"]
edition = "2018"

[dependencies]
prost = "0.9.0"
prost-types = "0.9.0"
bytes = "1.1.0"
num = "0.4.0"
