[package]
name = "rust-openfmb-ops-protobuf"
# NB: When modifying the version, also modify html_root_url in lib.rs
version = "2.2.0"
authors = ["Owen"]
license = "Apache-2.0"
repository = "https://github.com/OpenFMB-Users-Group/psm-protobuf-rust"
documentation = "https://docs.rs/rust-openfmb-ops-protobuf"
readme = "README.md"
description = "Rust language protobuf definitions for the OpenFMB operational use cases."
keywords = ["openfmb", "protobuf"]
categories = ["encoding"]
edition = "2025"

[dependencies]
prost = "0.9.0"
prost-types = "0.9.0"
bytes = "1.1.0"
num = "0.4.0"
